# markdown-semantic-search

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  SEMANTIC_SEARCH_GUIDE.md  example.md  main.py  pyproject.toml  requirements.txt  run.sh  sample.md
src/: __init__.py  app.py  file_system.py  main.py  semantic_search.py  utils.py
web/: index.html  script.js  style.css
